enum Command {
    case Hit
    case Stand
    case Double
    case Split
    case Unknown
}
